# ACC-Reclone

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  REPO_INDEX.md  package.json  pnpm-lock.yaml  run-api.cmd  start-aether.cmd
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  seo.ts  sitemap.ts
apps/web/components/: ad-command-center.tsx  (+8 more)
docs/: agents.md  architecture.md  media-manifest.md
docs/figma-handoff/: README.md  asset-request-list.md  copy-deck.md  design-tokens.json  dev-handoff.md  moodboard-references.md
infra/: .terraform.lock.hcl  README.md  apis.tf  artifact-registry.tf  cloudrun.tf  cloudsql.tf  cloudtasks.tf  iam.tf  load-balancer.tf  locals.tf  outputs.tf  pubsub.tf  secret-manager.tf  storage.tf  variables.tf  versions.tf
infra/env/: dev.tfvars  prod.tfvars  staging.tfvars
legacy/prototype/: creative_director.py  editor.py  main.py  narrator.py  producer.py  requirements.txt
reports/clutter/: case-studies.json  command-center.json  home.json  journal.json  pricing.json  sample-runs.json
reports/motion/: homepage.md
scripts/qa/: a11y.mjs  all.mjs  config.mjs  content.mjs  flows.mjs  motion.mjs  perf.mjs  seo.mjs  shared.mjs  visual.mjs
services/: Cargo.toml
services/api/: Cargo.toml  Dockerfile
services/api/src/: lib.rs  main.rs
services/orchestrator/: Cargo.toml  Dockerfile
services/shared/: Cargo.toml
services/workers/: Cargo.toml  Dockerfile
(+47 files in other folders)
